# 2D-Vector-Vorticity-Model

./: .buildinfo  .gitattributes  .gitignore  CMakeLists.txt  Install_compilers_libraries.md  README.md  genindex.html  index.html  objects.inv  plot.sh  run.sh  run_CPU.sh  search.html  searchindex.js  vvm_config.txt
.doctrees/: environment.pickle  index.doctree
.doctrees/api/: ModelDesign.doctree  README.doctree  class.doctree  header.doctree  install_compilers_libraries.doctree
.doctrees/api/class/: Init.doctree  Iteration.doctree  Output.doctree  config.doctree  vvm.doctree
.doctrees/api/header/: Config.doctree  Const.doctree
.github/workflows/: documentation.yml
_sources/: index.rst
_sources/api/: ModelDesign.rst  class.rst  header.rst  install_compilers_libraries.rst
_sources/api/class/: Iteration.rst  Output.rst  config.rst  vvm.rst
_sources/api/header/: Config.rst
api/: ModelDesign.html  README.html  class.html  header.html  install_compilers_libraries.html
api/class/: Init.html  Iteration.html  Output.html  config.html  vvm.html
api/header/: Config.html  Const.html
docs/: Doxyfile  Doxyfile.bak  conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/doctrees/api/: ModelDesign.doctree  README.doctree  class.doctree  class2DVVM.doctree  header.doctree  install_compilers_libraries.doctree
docs/_build/doctrees/api/class/: Init.doctree  Iteration.doctree  Output.doctree  config.doctree  vvm.doctree
docs/_build/doctrees/api/class/vvm_class/: init.doctree
docs/_build/doctrees/api/header/: Config.doctree  Const.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/html/_sources/api/: ModelDesign.rst  class.rst  class2DVVM.rst
docs/_build/html/_sources/api/class/: Init.rst  vvm.rst
docs/_build/html/_sources/api/class/vvm_class/: init.rst
docs/_build/html/api/: ModelDesign.html  README.html  class.html  class2DVVM.html  header.html  install_compilers_libraries.html
docs/_build/html/api/class/: Init.html  Iteration.html  Output.html  config.html  vvm.html
docs/_build/html/api/class/vvm_class/: init.html
docs/_build/html/api/header/: Config.html  Const.html
docs/api/: ModelDesign.rst  README.rst  header.rst  install_compilers_libraries.rst
docs/api/header/: Const.rst
docs/html/: AddForcing_8cpp.html  AddForcing_8cpp__incl.dot  AddForcing_8cpp__incl.map  AddForcing_8cpp__incl.md5  AddForcing_8cpp_source.html  Advection_8cpp.html  Advection_8cpp.js  Advection_8cpp__incl.dot  Advection_8cpp__incl.map  Advection_8cpp__incl.md5  Advection_8cpp_a75af9b80e9b72faac90f0e574bc62a8d_icgraph.dot  Advection_8cpp_a8566d63c1693d34aba0fa86f658532a2_icgraph.map  Advection_8cpp_a8566d63c1693d34aba0fa86f658532a2_icgraph.md5  Advection_8cpp_ac35c0748e7807333a355cd2b8e5dfef8_icgraph.dot  Advection_8cpp_ac35c0748e7807333a355cd2b8e5dfef8_icgraph.map  Advection_8cpp_ac35c0748e7807333a355cd2b8e5dfef8_icgraph.md5  Advection_8cpp_ac8a793aa9b91091521141a121f60ef90_icgraph.map  Advection_8cpp_ac8a793aa9b91091521141a121f60ef90_icgraph.md5  Advection_8cpp_ad84d7b263ba0496ac8d74df75d706075_icgraph.map  Advection_8cpp_ad84d7b263ba0496ac8d74df75d706075_icgraph.md5  Advection_8cpp_afd67bfda19d291830edf3e9849cc9277_icgraph.map  Advection_8cpp_afd67bfda19d291830edf3e9849cc9277_icgraph.md5  Advection_8cpp_aff7c21fcae63b86ac2b3234e1bc5f188_icgraph.map  Advection_8cpp_aff7c21fcae63b86ac2b3234e1bc5f188_icgraph.md5  Advection_8cpp_source.html  Boundary_8cpp.html  Boundary_8cpp__incl.dot  Boundary_8cpp__incl.map  Boundary_8cpp__incl.md5  Boundary_8cpp_source.html  Buoyancy_8cpp.html  Buoyancy_8cpp.js  Buoyancy_8cpp__incl.dot  Buoyancy_8cpp__incl.map  Buoyancy_8cpp__incl.md5  Buoyancy_8cpp_a8ecf3975b610cb48d26b59dead3553db_icgraph.dot  Buoyancy_8cpp_a8ecf3975b610cb48d26b59dead3553db_icgraph.map  Buoyancy_8cpp_a8ecf3975b610cb48d26b59dead3553db_icgraph.md5  Buoyancy_8cpp_source.html  Config_8hpp.html  (+426 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_5.js  defines_6.js  defines_7.js  defines_8.js  defines_9.js  (+57 more)
docs/xml/: AddForcing_8cpp.xml  Advection_8cpp.xml  Boundary_8cpp.xml  Buoyancy_8cpp.xml  Config_8hpp.xml  Const_8hpp.xml  Declare_8cpp.xml  Declare_8hpp.xml  Doxyfile.xml  Init_8cpp.xml  Init_8hpp.xml  Iteration_8cpp.xml  Iteration_8hpp.xml  MicroPhysics_8cpp.xml  NumericalProcess_8cpp.xml  Output_8cpp.xml  Output_8hpp.xml  PoissonSolver_8cpp.xml  README_8md.xml  ReadConfig_8cpp.xml  ReadConfig_8hpp.xml  Timer_8hpp.xml  Turbulent_8cpp.xml  classConfig__VVM.xml  classInit.xml  classIteration.xml  classOutput.xml  classTimer.xml  classvvm.xml  classvvm_1_1Init.xml  classvvm_1_1Iteration.xml  classvvm_1_1MicroPhysics.xml  classvvm_1_1NumericalProcess.xml  classvvm_1_1Output.xml  classvvm_1_1PoissonSolver.xml  classvvm_1_1Turbulence.xml  dir_3734e76862bf444052cec1b9d7e4d24e.xml  dir_68267d1309a1af8e8297ef4c3efbcdba.xml  dir_acd06b18086a0dd2ae699b1e0b775be8.xml  dir_bd9c43a43d14dccdedc2dc373839eb9f.xml  (+7 more)
include/matplotlib-cpp-master/: matplotlibcpp.h
input/: bubble_init.txt
scripts/: CMakeLists_CPU.txt  CMakeLists_CPUGPU_108.txt  CMakeLists_GPU.txt  CMakeLists_GPU_twnia2.txt  vvm.ctl
src/: AddForcing.cpp  Advection.cpp  Boundary.cpp  Buoyancy.cpp  Config.hpp  Const.hpp  Declare.cpp  Declare.hpp  Define.hpp  Init.cpp  Init.hpp  Iteration.cpp  Iteration.hpp  MicroPhysics.cpp  NumericalProcess.cpp  Output.cpp  Output.hpp  OutputNC.cpp  OutputNC.hpp  Outputfile.cpp  Outputfile.hpp  Plot.cpp  PlotAll.py  PlotFunc.py  PoissonSolver.cpp  PoissonSolver_GPU.cpp  PoissonSolver_GPU_mpi.cpp  ReadConfig.cpp  Rrtmgp.cpp  SurfaceFlux.cpp  Turbulent.cpp  main.cpp  microphy_p3.f90  plotCallByCPlusPlus.py
